# cl-cpp-generator2

./: .gitignore  .gitmodules  LICENSE  README.md  README.org  README_guidlines.md  README_notes.md  c.lisp  cl-cpp-generator2.asd  package.lisp
.agents/: AGENTS.md
.github/workflows/: cmake_134.yml  cmake_134_win.yml  cmake_143.yml
doc/: README.org
example/01_helloworld/: gen.lisp
example/02_shader/: README.org  gen.lisp  gen01.lisp
example/03_cuda/: README.org  gen.lisp  gen02.lisp  gen03.lisp  gen04.lisp  gen05magma.lisp  gen06.lisp  (+1 more)
example/04_vulkan/source/: CMakeLists.txt  compile_shaders.sh  get_libs.sh  get_stb_image.sh  run_00_test.cpp  run_01_base.cpp  run_01_base.frag  run_01_base.vert
example/100_cuda1_1_box/source00/: CMakeLists.txt  main.cpp  setup01_compile_clang.sh
example/110_capnproto/source00/: CMakeLists.txt  main.cpp  my_service.capnp
example/111_audio/source00/: CMakeLists.txt  Makefile  c_resource.hpp  compile01.sh  fatheader.hpp  main.cpp
example/111_audio/source01/: CMakeLists.txt  main.cpp
example/118_opencascade/source00/: CMakeLists.txt  compile.sh  main.cpp
example/119_vulkan_hpp_comp/source00/: CMakeLists.txt  Makefile  main.cpp  setup01_compile.sh
example/120_pico_motor/source01/: CMakeLists.txt  counter.pio  main.cpp  motor_library.hpp  stepper.pio
example/120_pico_motor/source01/b/: setup01_build.sh
example/121_nanopb/source01/: CMakeLists.txt  TcpServer.cpp  TcpServer.h  client.cpp  data.proto  data_pb2.py  main.cpp  p02_pb_client.py  p03_pb_server.py  setup02gen_python.sh
example/123_music/source00/: CMakeLists.txt  EnvelopeGenerator.cpp  EnvelopeGenerator.h  WavetableOscillator.cpp  WavetableOscillator.h  main.cpp  setup01_get_fmtlib.sh
example/126_quant_pow/source00/: CMakeLists.txt  main.cpp
example/127_opencv_amd/source00/: ArucoCheckerboardDisplay.cpp  ArucoCheckerboardDisplay.h  AurcoCheckerboardDisplay.cpp  CMakeLists.txt  CheckerboardDisplayInterface.hpp  main.cpp
example/127_opencv_amd/source02/: CMakeLists.txt  main.cpp
example/127_opencv_amd/source04/: CMakeLists.txt  main.cpp
example/127_opencv_amd/source05/: CMakeLists.txt  main.cpp
example/127_opencv_amd/source06/: CMakeLists.txt  main.cpp
example/127_opencv_amd/source07/: CMakeLists.txt  main.cpp
example/130_igl/source00/: CMakeLists.txt  compile.sh  main.cpp
example/131_sdr/source01/: ArgException.cpp  ArgException.h  CMakeLists.txt  main.cpp  setup01_build.sh
example/131_sdr/source02/: CMakeLists.txt  setup02_get_assets.sh
example/157_pool/: CMakeLists.txt  README.md  doc.md  gen01.lisp  pmr.cpp
example/157_pool/source01/: CMakeLists.txt
example/157_pool/source01/src/: main.cpp
example/164_daxa/: CMakeLists.txt  README.md  setup01_compile_daxa.sh
example/164_daxa/daxa_cfg/: CMakeLists.txt  setup01_compile_daxa.sh
example/164_daxa/src/: main.cpp  main.glsl  main_tut.cpp  shared.inl  window.h
example/181_reference_koan/: CMakeLists.txt  gen01.lisp
example/181_reference_koan/src/: Arena.h  Ref.h  main.cpp
example/181_reference_koan/tests/: test_Arena.cpp  test_Ref.cpp
example/183_net_pool_koan/: 1.md  2.md  CMakeLists.txt  Doxyfile  README.md
example/183_net_pool_koan/src/app/: application.h  main.cpp
example/183_net_pool_koan/src/common/: common.h  thread_safe_queue.h
example/183_net_pool_koan/src/concrete/: concrete_item_processors.h  simulated_network_receiver.h
example/183_net_pool_koan/src/core/: consumer.h  data_pool.h  pool_item_reference.h  producer.h
example/183_net_pool_koan/src/interfaces/: iitem_processor.h  inetwork_receiver.h  ipool_interfaces.h
example/183_net_pool_koan/tests/: main_test.cpp  test_consumer.cpp  test_producer.cpp
example/183_net_pool_koan/tests/mocks/: mock_item_processor.h  mock_network_receiver.h  mock_pool_interfaces.h
example/185_variant_alt_koan/: CMakeLists.txt  README.md
example/185_variant_alt_koan/src/: variant.cpp
example/187_net_koan/: CMakeLists.txt
example/187_net_koan/benchmarks/: buffer_benchmark.cpp  parser_benchmark.cpp
example/187_net_koan/src/: client.cpp  parser.cpp  parser.h  protocol.h  server.cpp  test_utils.cpp  test_utils.h
example/187_net_koan/src/buffers/: deque_buffer.cpp  deque_buffer.h  ring_array_buffer.cpp  ring_array_buffer.h  vector_buffer.cpp  vector_buffer.h
example/187_net_koan/src/interfaces/: ibuffer.cpp  ibuffer.h
example/187_net_koan/tests/: buffer_correctness_test.cpp  parser_test.cpp
example/190_lua/: CMakeLists.txt  gen01.lisp
example/190_lua/src/: main.cpp
example/190_lua/src/lua-5.4.8/src/: luaconf.h
example/191_lua_cpp/: CMakeLists.txt  gen01.lisp  setup01_deps.sh
example/191_lua_cpp/scripts/: demo.lua
example/191_lua_cpp/src/: main.cpp
example/192_grpc_lib/: CMakeLists.txt  CMakePresets.json  run_demo.sh
example/192_grpc_lib/include/common/: DataStructs.hpp
example/192_grpc_lib/include/interfaces/: IProcessor.hpp
example/192_grpc_lib/plan/: implementation.md  requirements.md  task.md
example/192_grpc_lib/src/alpha/: CMakeLists.txt  main.cpp
example/192_grpc_lib/src/beta/: CMakeLists.txt  SensorFusion.cpp  SensorFusion.hpp  main.cpp
example/192_grpc_lib/src/libone/: CMakeLists.txt  LocalProcessor.cpp  LocalProcessor.hpp
example/192_grpc_lib/src/libtwo/: CMakeLists.txt  RemoteProcessor.cpp  RemoteProcessor.hpp
example/192_grpc_lib/src/proto/: CMakeLists.txt  processor.proto
example/196_forthjit/: CMakeLists.txt  ForthVM.h  JITCompiler.cpp  JITCompiler.h  Operation.cpp  Operation.h  forth_subset_spec_min.md  gen01.lisp  gen01_config.lisp  helpers.h  helpers.lisp  jit.lisp  main.cpp  main.lisp  main2.cpp  operation.lisp  readme.md  run_backtrace.lisp  setup00_transpile.sh  setup01_compile.sh  test_gen.lisp  test_write_class.lisp  util.lisp  vm.lisp  xmake.lua
example/196_forthjit/slop/: gen01.lisp  gen01_forth_vm.lisp  gen01_jit_compiler.lisp  gen01_main.lisp  gen01_operation.lisp  util.lisp
example/196_forthjit/src/: ForthVM.cpp  ForthVM.h  JITCompiler.cpp  JITCompiler.h  Operation.h  helpers.h
tools/: format_lisp.sh
train_llm/: README.md  gen01.lisp  review_prompt.txt
(+1586 files in other folders)
